2023-12-02 Gabriele Gorla <gorlik@yahoo.com>

	* sdas/asz80/z80pst.c,
	  sdas/asz80/z80.h,
	  sdas/asxxsrc/asxxxx.h,
	  sdas/as6808/m6808.h,
	  sdas/as6808/m08pst.c:
	  Change several constants to match upstream asxxxx.
	* sdas/as6500/r6500.h,
	  sdas/as6500/r65mch.c,
	  sdas/as6500/r65pst.c:
	  Enable cpu type selection for as6500.
	* device/lib/mos65c02/Makefile.in,
      device/lib/mos65c02/crt0.s,
      device/lib/mos65c02/abs.c,
      device/lib/mos65c02/_srulonglong.c,
      device/lib/mos65c02/_srslonglong.c,
      device/lib/mos65c02/_setjmp.c,
      device/lib/mos65c02/_ret4567.s,
      device/lib/mos65c02/_ret23.s,
      device/lib/mos65c02/_ret01.s,
      device/lib/mos65c02/_muluchar.s,
      device/lib/mos65c02/_mulschar.s,
      device/lib/mos65c02/_mulint.s,
      device/lib/mos65c02/__memcpy.s
	  Make the mos65c02 library compile.
	  
2023-12-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-2776.c,
	  support/regression/tests/bug-3368.c,
	  support/regression/tests/gcc-torture-execute-920625-1.c,
	  support/regression/tests/gcc-torture-execute-va-arg-23.c,
	  support/regression/tests/gcc-torture-execute-va-arg-4.c:
	  Enable struct parameter tests for all ports except mos6502 (which doesn't support them yet).

2023-12-01 Gabriele Gorla <gorlik@yahoo.com>

	* sdas/asxxsrc/asmain.c:
	  simplify parsing of number radix (similar to upstream asxxxx).
	* src/mos6502/main.c:
	  add ".r56c02" to the assembler output for mos65c02 port.
	* src/device/lib/mos65c02/Makefile.in,
	  src/device/lib/mos65c02/__sdcc_indirect_jsr.s,
	  src/device/lib/mos65c02/_dptr.s,
	  src/device/lib/mos65c02/_temp.s
	  add missing files to the mos65c02 std lib.
	  
2023-12-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c:
	  Port a simplification from f8 to stm8.
	* src/mcs51/main.c:
	  Fix an mcs51 peephole optimizer issue noticed by Oleg Endo.

2023-11-29 Gabriele Gorla <gorlik@yahoo.com>

	* sdas/as6500/r65mch.c: