@@ -10,6 +10,10 @@ else
   GPSIM := $(WINE) gpsim$(EXEEXT)
 endif
 
+EMU = $(GPSIM)
+EMU_FLAGS = -i -s
+EMU_INPUT = -c $(PORTS_DIR)/pic16/gpsim.cmd
+
 ifndef SDCC_BIN_PATH
   ifndef CROSSCOMPILING
     SDCCFLAGS += --nostdinc -I$(top_srcdir)/device/include/pic16 -I$(top_srcdir)/device/non-free/include/pic16 -I$(top_srcdir)
@@ -28,6 +32,9 @@ endif
 SDCCFLAGS += -mpic16 -pp18f452 --less-pedantic -Wl,-q
 SDCCFLAGS += --no-peep
 SDCCFLAGS += --no-warn-non-free
+# The default crt0iz.o does not work in the simulator.  It clears all memory
+# from 0xeff to 0x0, many devices don't have that much memory.
+SDCCFLAGS += --use-crt=crt0i.o
 LINKFLAGS += libsdcc.lib libc18f.lib libm18f.lib
 
 OBJEXT = .o
